# sns-multi-posts

./: .gitignore  .vercelignore  README.md  pyproject.toml  vercel.json
api/: index.py
app/: main.py
app/routers/: auth.py  post.py
app/services/: bluesky.py  misskey.py  twitter.py
app/templates/: index.html
app/templates/auth/: bluesky_login.html  misskey_login.html
static/: manifest.json  sw.js
static/css/: styles.css
