[project]
name = "sns-multi-posts"
version = "0.1.0"
description = "Post to multiple SNS platforms simultaneously"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.17",
    "httpx>=0.27.2",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.4",
    "authlib>=1.3.2",
    "atproto>=0.0.0",
    "tweepy>=4.16.0",
    "pillow>=10.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "ruff>=0.14.7",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
